--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "django-menu-generator>=1.1.0",
     "tablib>=3.8.0",
     "openpyxl>=3.1.5",
+    "django-pwa>=2.0.1",
 ]
 
 [build-system]
